--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ flutter:
   uses-material-design: true
 
   assets: 
-    - assets/images/cardblank.png
-    - assets/images/noleaves2.png
+    - assets/images/
   fonts: 
       - family: primary
         fonts: 
