--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.4
+
+  path_provider: ^0.5.0+1
   auto_size_text: ^2.1.0
   flutter:
     sdk: flutter
@@ -42,8 +45,10 @@ flutter:
   uses-material-design: true
 
   assets: 
-    - assets/images/cardblank.png
-    - assets/images/noleaves2.png
+    - assets/images/
+    - assets/textfiles/permanentcardsfile.txt
+  
+
   fonts: 
       - family: primary
         fonts: 
