--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,13 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter 
+  flutter_launcher_icons: "^0.7.3"
+  
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/FAlauncherIcon-01.png"
 
 
 
@@ -53,6 +59,7 @@ flutter:
   assets: 
     - assets/images/
     - assets/textfiles/permanentcardsfile.txt
+    - assets/icon/
   
 
   fonts: 
