--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   shared_preferences: ^0.5.4
   url_launcher: ^5.0.1
   path_provider: ^0.5.0+1
+  fluttertoast: ^3.1.3
+
   auto_size_text: ^2.1.0
   flutter:
     sdk: flutter
