--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_local_notifications:
+  dots_indicator: ^1.0.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter 
   flutter_launcher_icons: "^0.7.3"
+ 
   
 flutter_icons:
   android: "launcher_icon" 
