--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter 
   flutter_launcher_icons: "^0.7.3"
+  package_info: ^0.4.0+3
+
  
   
 flutter_icons:
